objects/JOB__c/JOB__c.object-meta.xml
<CustomObject>
    <label>JOB</label>
    <nameField>
        <displayFormat>JN-{0000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JOBS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>