objects/JOB__c/fields/Authorization_Granted__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorization Granted</label>
    <type>Checkbox</type>
</CustomField>