objects/JOB__c/fields/Authorization_Requested__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorization Requested</label>
    <type>Checkbox</type>
</CustomField>