objects/JOB__c/fields/Mileage_In__c.field-meta.xml
<CustomField>
    <fullName>Mileage_In__c</fullName>
    <label>Mileage In</label>
    <length>100</length>
    <type>Text</type>
</CustomField>