objects/JOB__c/fields/Mileage_Out__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Out__c</fullName>
    <label>Mileage Out</label>
    <length>100</length>
    <type>Text</type>
</CustomField>