objects/JOB__c/fields/No_of_Consumable__c.field-meta.xml
<CustomField>
    <fullName>No_of_Consumable__c</fullName>
    <label>No. of Consumable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>