objects/JOB__c/fields/No_of_Job_Line__c.field-meta.xml
<CustomField>
    <fullName>No_of_Job_Line__c</fullName>
    <label>No of Job Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>