objects/JOB__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>AcctSeedERP__Sales_Order__c</referenceTo>
    <relationshipLabel>JOBS</relationshipLabel>
    <relationshipName>JOBS</relationshipName>
    <type>Lookup</type>
</CustomField>