objects/JOB__c/fields/Trailer_Number__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Number__c</fullName>
    <label>Trailer Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>