objects/JOB__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>