objects/JOB__c/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <label>Vehicle Make</label>
    <length>100</length>
    <type>Text</type>
</CustomField>